--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "^0.11.4",
+    "@stencil/core": "0.13.0-0",
     "@types/jest": "^23.3.1",
     "jest": "^23.4.2"
   },
