--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "start": "stencil build --dev --watch --serve",
+    "start": "stencil build --dev --watch --serve --es5",
     "test": "jest",
     "test.watch": "jest --watch"
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "0.13.0-3",
+    "@stencil/core": "0.13.0-12",
     "@types/jest": "^23.3.1",
     "jest": "^23.4.2"
   },
